# rust_1

./: Cargo.toml  README.md  dfx.json  did.sh  package.json
src/rust_1_backend/: Cargo.toml  rust_1_backend.did  smart_watering_system.did
src/rust_1_backend/src/: lib.rs
