[package]
name = "rust_1_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.9"
ic-cdk = "0.14.0"
ic-cdk-timers = "0.8.0" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"